Deploy/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-landing-app-service
spec:
  selector:
    app: react-landing-app
  ports:
  - port: 3000
    targetPort: 8080
