Deploy/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-landing-app-ingress
  labels:
    name: react-landing-app-ingress
spec:
  rules:
  - host: panchanandevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-landing-app-service
            port:
              number: 3000
